# Verifier

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  install.sh  test.sh
src/: verifier.c  verifier.h  verify.c
tests/: error_no_data.vfy  error_no_hdr.vfy  error_no_sgn.vfy  error_wrongname.vfy  invalid.vfy  invalid_archive_badfile.vfy  testsuite.sh  unknown.vfy  valid.vfy
